force-app/main/default/objects/Case/fields/Failure_Type__c.field-meta.xml
<CustomField>
    <fullName>Failure_Type__c</fullName>
    <description>Why the Pronto Service Agent could not resolve the conversation. Set on cases with Origin = Agent.</description>
    <label>Failure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Escalation Failed</fullName><default>false</default><label>Escalation Failed</label></value>
            <value><fullName>Clarification Loop</fullName><default>false</default><label>Clarification Loop</label></value>
            <value><fullName>Action Error</fullName><default>false</default><label>Action Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>