force-app/main/default/objects/Case/fields/Reported_Storefront__c.field-meta.xml
<CustomField>
    <fullName>Reported_Storefront__c</fullName>
    <description>Storefront name typed or picked by the merchant on the Merchant Report web form. The Merchant Report Case Enrichment flow matches it to a Storefront record.</description>
    <label>Reported Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>