force-app/main/default/objects/Case/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Storefront the case is about. Filled from the reporting Contact for merchant reports, or set by the agent / seed data. Used for reporting and the merchant-aware agent check.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>