force-app/main/default/objects/Case/listViews/Agent_Failures.listView-meta.xml
<ListView>
    <fullName>Agent_Failures</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Failure_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Agent</value>
    </filters>
    <label>Agent Failures</label>
</ListView>