force-app/main/default/objects/Case/listViews/Merchant_Reports.listView-meta.xml
<ListView>
    <fullName>Merchant_Reports</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Storefront__c</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Merchant Report</value>
    </filters>
    <label>Merchant Reports</label>
</ListView>